--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href='//fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 		<link href='//fonts.googleapis.com/css?family=Delius+Swash+Caps' rel='stylesheet' type='text/css'>
-		<script src="jquery-1.11.0.min.js"></script>
+		<script src="javascripts/jquery-1.11.0.min.js"></script>
 	</head>
 	<body>
 		<style>
