--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			</div>
 			<hr width="340px" align="center">
 			<div class="music">
-				<embed src="//www.sheepproductions.com/billy/billy.swf?autoplay=false&f0=http://ww8.mp3juices.com/download/6-10v4/p22/219481593/9d51346407651c/exo---growl-(korean-ver.).mp3&t0=EXO - Growl&total=1" quality="high" wmode="transparent" width="200" height="10" name="billy" align="middle" type="application/x-shockwave-flash" />
+				<embed src="//www.sheepproductions.com/billy/billy.swf?autoplay=false&f0=http://31.media.tumblr.com/tumblr_mqn0nhKOah1rxpgxgo1.mp3&t0=EXO - Growl&total=1" quality="high" wmode="transparent" width="200" height="10" name="billy" align="middle" type="application/x-shockwave-flash" />
 			</div>
 		</div>
 	</body>
