--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			#content{
 				background: #fdfdfd;
 				width: 360px;
-				margin: 10 auto;
+				margin: 10px auto;
 				padding: 10px;
 				height: 400px;
 			}
@@ -74,7 +74,7 @@
 			#subhead{
 				width: 350px;
 				border-bottom: 1px solid #ccc;
-				margin: 15 auto;
+				margin: 15px auto;
 				margin-bottom: 25px;
 				text-align: center;
 				color: #888;
@@ -89,7 +89,7 @@
 			}
 			.music{
 				width: 200px;
-				margin: 15 auto;
+				margin: 15px auto;
 			}
 			hr{
 				margin:15 auto;
@@ -99,7 +99,7 @@
 				width: 200px;
 				font-size: 8pt;
 				text-align: center;
-				margin:15 auto;
+				margin:15px auto;
 				color:#000;
 			}
 		</style>
