--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				line-height: 0;
 			}
 			.menu{
-				margin: 10 auto;
+				margin: 10px auto;
 			}
 			.genres{
 				margin: 0 auto;
@@ -92,7 +92,7 @@
 				margin: 15px auto;
 			}
 			hr{
-				margin:15 auto;
+				margin:15px auto;
 				color:#ccc;
 			}
 			#copyright{
